Added metric/imperial converter
will comment tomorrow

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <!--start of the interesting stuff-->
 <body>
 
+    <!--basic user settings-->
+    <div style="margin-top: 0%; text-align: right;"> 
+        <button id="imperial" onclick="setUnit(this.id)">Imperial</button>
+        <button id="metric" onclick="setUnit(this.id)">Metric</button>
+    </div>
+
 
     <!--search box at top of screen which always stays present-->
     <div style="text-align: center;">
