More time zone issues fixed!
remembered that days started at 12am not 1am and fixed a couple issues related to that

fixed a potential bug where if you tried to access a location currently in a different day due to timezone differences results would not load due to out of bounds accessing of an array

Fixed a bug where the hourly report was grabbing weather data from the start of the current day past 11pm instead of the start of the next day

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <!--search box at top of screen which always stays present-->
+    <!--search box at top of screen which is always visible-->
     <div>
         <p class="sectionHeader" style="padding-bottom: 0%; margin-bottom: 0%;">Zev's Weather Website</p>
         
