One final timezone fix
The date object now uses the timezone of the search results instead of the local timezone significantly reducing the amount of math we had to do

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             <button id="hourlyToggle" class="forecastToggle" onclick="toggleHourly();" style="margin-left: 35%;">Show/Hide Hourly Forecast</button>
             <button id="weeklyToggle" class="forecastToggle" onclick="toggleWeekly();">Show/Hide Weekly Forecast</button>
         </div>
-        
+
+        <hr noshade="true" color="black"/>
 
         <!--A header telling the user this is the hourly forecast-->
         <div id="hourlyForecastHeader" class="sectionHeader">Hourly Forecast</div>
